Changes to popup.js and popup.html
- Added option to omit downloading images

--- a/popup.html
+++ b/popup.html
@@ -62,6 +62,19 @@
               </div>
             </div>   
           </div>
+
+          <div class="col-12">
+            <div class="form-check">
+              <label class="form-check-label" for="omit_imgs">
+                <input class="form-check-input" name="omit_imgs" type="checkbox" id="omit_imgs">
+                Omit Images
+              </label>
+              <div class="tooltip2">&#x1F6C8;
+                <span class="tooltiptext2">Select this if you wish to download webpages without images.</span>
+              </div>
+            </div>   
+          </div>
+
         </div>
         <div class="alert alert-danger" role="alert" id="link_alert" style="font-size:12px" hidden>
           This page has a lot of links, we highly reccomend setting a low depth or a max link limit.
