--- a/popup.html
+++ b/popup.html
@@ -4,22 +4,20 @@
 -->
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <script src="js/bootstrap.min.js"></script>
   <head>
     <title>Grey-box Web Scraper</title>
-
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body class="py-2 px-3 bg-light">
-    <h1 class="text-center">Grey-Box Web Downloader</h1>
+    <h1 class="text-center">Grey-Box<br> Web Downloader</h1>
     <form id="form" class="row row-cols-lg-auto g-3 align-items-center">
       <div class="col-12 input-group-sm">
         <label for="urlFormInput">Starting URL </label>
-        <div class="tooltip2" style=>&#x1F6C8;
+        <div class="tooltip2">&#x1F6C8;
           <span class="tooltiptext2">Enter the URL/Link to the website here</span>
         </div>
         <input type="url" required name="url" disabled class="form-control" id="urlFormInput" placeholder="Enter URL">
