Experimental Change to New Window
- Moved most of popup.js functionality to window.js, which runs on an external window window.html

--- a/popup.html
+++ b/popup.html
@@ -43,12 +43,6 @@
 
       <form id="option-form" class="row row-cols-lg-auto g-3 align-items-center" action="#">
         <div class="col-12">
-          <div class="form-check">
-            <label class="form-check-label" for="aszip">
-              <input class="form-check-input" name="aszip" type="checkbox" id="aszip">
-              Download as ZIP file
-            </label>
-          </div>
           <div class="col-12">
             <div class="form-check">
               <label class="form-check-label" for="max_links_op">
@@ -80,6 +74,9 @@
       </form>
       <div class="col-12 mb-2">
         <button id="submitBtn" type="submit" class="btn btn-secondary btn-sm">Download</button>
+      </div>
+      <div class="col-12 mb-2">
+        <button id="submitBtn2" type="submit" class="btn btn-secondary btn-sm">Download2</button>
       </div>
     </form>
 
