Changes to window.js & popup
window.js:
- Added Vivian's changes from main to this experimental version

popup.js/html:
- Removed two download buttons, instead loading the separate window on opening the extension
- Removed references to max links, a feature not yet present in this version.

--- a/popup.html
+++ b/popup.html
@@ -31,18 +31,18 @@
         <input class="d-inline-block" type="number" name="depth" min="0" max="10" class="form-control" id="depthFormInput" placeholder="0-10" value="1">
       </div>
 
-      <div class="col-12 input-group-sm" id="max_links_div" hidden>
+      <!-- <div class="col-12 input-group-sm" id="max_links_div" hidden>
         <label class="d-inline-block" for="depthFormInput">Max Links</label>
         <input class="d-inline-block" type="number" name="depth" min="1" max="1000" class="form-control" id="max-links" placeholder="1-100" value="1">
-      </div>
+      </div> -->
 
-      <div class="progress">
+      <!-- <div class="progress">
         <div  id="progress-bar" class="progress-bar progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
-      <p id="currentProgress"></p>
+      <p id="currentProgress"></p> -->
 
       <form id="option-form" class="row row-cols-lg-auto g-3 align-items-center" action="#">
-        <div class="col-12">
+       <!--  <div class="col-12">
           <div class="col-12">
             <div class="form-check">
               <label class="form-check-label" for="max_links_op">
@@ -53,7 +53,7 @@
                 <span class="tooltiptext2">Select this if you think the page has a lot of links</span>
               </div>
             </div>   
-          </div>
+          </div> -->
 
           <div class="col-12">
             <div class="form-check">
@@ -74,9 +74,6 @@
       </form>
       <div class="col-12 mb-2">
         <button id="submitBtn" type="submit" class="btn btn-secondary btn-sm">Download</button>
-      </div>
-      <div class="col-12 mb-2">
-        <button id="submitBtn2" type="submit" class="btn btn-secondary btn-sm">Download2</button>
       </div>
     </form>
 
