--- a/popup.html
+++ b/popup.html
@@ -74,6 +74,8 @@
       </form>
       <div class="col-12 mb-2">
         <button id="submitBtn" type="submit" class="btn btn-secondary btn-sm">Download</button>
+        <a class="btn btn-success" href="./tutorial.html" target="_blank">Tutorial</a>
+
       </div>
     </form>
 
