--- a/window.html
+++ b/window.html
@@ -19,7 +19,17 @@
       <div  id="progress-bar" class="progress-bar progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
     <p id="currentProgress"></p>
-
+     
+    
+    <p>
+      <center>
+      Please provide feedback below!
+      <button onclick="window.location.href='https://forms.gle/p6quKSCDj5PoyVb37';">
+        Extension Feedback
+      </button>
+      </center>
+    </p>
+  
 
     <script src="js/jszip.js"></script>
     <script src="js/jszip-utils.js"></script>
