--- a/window.html
+++ b/window.html
@@ -24,9 +24,7 @@
     <p>
       <center>
       Please provide feedback below!
-      <button onclick="window.location.href='https://forms.gle/p6quKSCDj5PoyVb37';">
-        Extension Feedback
-      </button>
+      <a class="btn btn-success" href="https://forms.gle/p6quKSCDj5PoyVb37" target="_blank">Extension Feedback</a>
       </center>
     </p>
   
