html button changes
- Added consistency to button styles

--- a/window.html
+++ b/window.html
@@ -24,7 +24,7 @@
     <p>
       <center>
       Please provide feedback below!
-      <a class="btn btn-success" href="https://forms.gle/p6quKSCDj5PoyVb37" target="_blank">Extension Feedback</a>
+      <a class="btn btn-success btn-sm mt-2" href="https://forms.gle/p6quKSCDj5PoyVb37" target="_blank">Extension Feedback</a>
       </center>
     </p>
   
