--- a/popup.html
+++ b/popup.html
@@ -74,7 +74,7 @@
       </form>
       <div class="col-12 mb-2">
         <button id="submitBtn" type="submit" class="btn btn-secondary btn-sm">Download</button>
-        <a class="btn btn-success" href="./tutorial.html" target="_blank">Tutorial</a>
+        <a class="btn btn-success btn-sm" href="./tutorial.html" target="_blank">Tutorial</a>
 
       </div>
     </form>
