Refactoring html files
Mostly changing id names to be consistent and removing outdated information.

--- a/options.html
+++ b/options.html
@@ -1,7 +1,7 @@
 <!--
     Some notes:
     This is the HTML for the options window that the user can navigate to
-    [PLACEHOLDER] indicates options that are not implemented yet
+    [PLACEHOLDER] indicates options that are planned, but not implemented yet
 -->
 <!DOCTYPE html>
 <html>
