--- a/popup.html
+++ b/popup.html
@@ -16,11 +16,11 @@
     <h1 class="text-center">Grey-Box<br> Web Downloader</h1>
     <form id="form" class="row row-cols-lg-auto g-3 align-items-center">
       <div class="col-12 input-group-sm">
-        <label for="urlFormInput">Starting URL </label>
+        <label for="url-input">Starting URL </label>
         <div class="tooltip2">&#x1F6C8;
           <span class="tooltiptext2">Enter the URL/Link to the website here</span>
         </div>
-        <input type="url" required name="url" disabled class="form-control" id="urlFormInput" placeholder="Enter URL">
+        <input type="url" required name="url" disabled class="form-control" id="url-input" placeholder="Enter URL">
       </div>
       
       <div class="col-12 input-group-sm">
@@ -31,29 +31,7 @@
         <input class="d-inline-block" type="number" name="depth" min="0" max="10" class="form-control" id="depth-input" placeholder="0-10" value="1">
       </div>
 
-      <!-- <div class="col-12 input-group-sm" id="max_links_div" hidden>
-        <label class="d-inline-block" for="depthFormInput">Max Links</label>
-        <input class="d-inline-block" type="number" name="depth" min="1" max="1000" class="form-control" id="max-links" placeholder="1-100" value="1">
-      </div> -->
-
-      <!-- <div class="progress">
-        <div  id="progress-bar" class="progress-bar progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-      </div>
-      <p id="currentProgress"></p> -->
-
       <form id="option-form" class="row row-cols-lg-auto g-3 align-items-center" action="#">
-       <!--  <div class="col-12">
-          <div class="col-12">
-            <div class="form-check">
-              <label class="form-check-label" for="max_links_op">
-                <input class="form-check-input" name="max_links_op" type="checkbox" id="max_links_op">
-                Set Max # of links
-              </label>
-              <div class="tooltip2">&#x1F6C8;
-                <span class="tooltiptext2">Select this if you think the page has a lot of links</span>
-              </div>
-            </div>   
-          </div> -->
 
           <div class="col-12">
             <div class="form-check">
@@ -67,16 +45,17 @@
             </div>   
           </div>
 
+        <div class="alert alert-danger" role="alert" id="link-alert" style="font-size:12px" hidden>
+          This page has a lot of links, we recommend setting a low depth for a faster download.
         </div>
-        <div class="alert alert-danger" role="alert" id="link_alert" style="font-size:12px" hidden>
-          This page has a lot of links, we highly reccomend setting a low depth or a max link limit.
-        </div>
-      </form>
-      <div class="col-12 mb-2">
-        <button id="submitBtn" type="submit" class="btn btn-primary btn-sm">Download</button>
-        <a class="btn btn-success btn-sm" href="./tutorial.html" target="_blank">Tutorial</a>
 
+      </form>
+
+      <div class="col-12 mb-2">
+        <button id="submit-btn" type="submit" class="btn btn-primary btn-sm">Download</button>
+        <a class="btn btn-success btn-sm" href="./tutorial.html" target="_blank">Tutorial</a>
       </div>
+
     </form>
 
     <button class="btn btn-sm btn-secondary" id="go-to-options">Go to options</button>
