--- a/window.html
+++ b/window.html
@@ -18,7 +18,7 @@
     <div class="progress">
       <div  id="progress-bar" class="progress-bar progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
-    <p id="currentProgress"></p>
+    <p id="current-progress"></p>
      
     
     <p>
