organizing files in the project

--- a/html/options.html
+++ b/html/options.html
@@ -5,13 +5,13 @@
 -->
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <script src="js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <script src="../js/bootstrap.min.js"></script>
   <head>
     <title>Grey-box Web Scraper Options</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/styles.css">
   </head>
   <body class="m-auto">
     
@@ -66,9 +66,9 @@
     </center>
   
 
-    <script src="js/jszip.js"></script>
-    <script src="js/jszip-utils.js"></script>
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/options.js"></script>
+    <script src="../js/jszip.js"></script>
+    <script src="../js/jszip-utils.js"></script>
+    <script src="../js/jquery-3.6.0.min.js"></script>
+    <script src="../js/options.js"></script>
   </body>
 </html>
