--- a/html/popup.html
+++ b/html/popup.html
@@ -4,13 +4,13 @@
 -->
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <script src="js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <script src="../js/bootstrap.min.js"></script>
   <head>
     <title>Grey-box Web Scraper</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/styles.css">
   </head>
   <body class="py-2 px-3 bg-light">
     <h1 class="text-center">Grey-Box<br> Web Downloader</h1>
@@ -53,16 +53,16 @@
 
       <div class="col-12 mb-2">
         <button id="submit-btn" type="submit" class="btn btn-primary btn-sm">Download</button>
-        <a class="btn btn-success btn-sm" href="./tutorial.html" target="_blank">Tutorial</a>
+        <a class="btn btn-success btn-sm" href="tutorial.html" target="_blank">Tutorial</a>
       </div>
 
     </form>
 
     <button class="btn btn-sm btn-secondary" id="go-to-options">Go to options</button>
 
-    <script src="js/jszip.js"></script>
-    <script src="js/jszip-utils.js"></script>
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/popup.js"></script>
+    <script src="../js/jszip.js"></script>
+    <script src="../js/jszip-utils.js"></script>
+    <script src="../js/jquery-3.6.0.min.js"></script>
+    <script src="../js/popup.js"></script>
   </body>
 </html>
