--- a/html/window.html
+++ b/html/window.html
@@ -4,13 +4,13 @@
 -->
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <script src="js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <script src="../js/bootstrap.min.js"></script>
   <head>
     <title>Grey-box Web Scraper</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/styles.css">
   </head>
   <body class="py-2 px-3 bg-light">
     <h1 class="text-center">Grey-Box<br> Web Downloader</h1>
@@ -29,9 +29,9 @@
     </p>
   
 
-    <script src="js/jszip.js"></script>
-    <script src="js/jszip-utils.js"></script>
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/window.js"></script>
+    <script src="../js/jszip.js"></script>
+    <script src="../js/jszip-utils.js"></script>
+    <script src="../js/jquery-3.6.0.min.js"></script>
+    <script src="../js/window.js"></script>
   </body>
 </html>
