--- a/html/popup2.html
+++ b/html/popup2.html
@@ -10,13 +10,12 @@
     <link rel="stylesheet" href="../css/styles.css">
   </head>
   <body class="py-2 px-3 white-background text-center ">
-    <img src="../images/image.png" class="mx-auto d-block" height="40" width="200">
     <div class="d-flex justify-content-end mb-2 ms-auto">
       <a class="me-2" href="tutorial.html" target="_blank">
-        <i class="bi bi-question-square-fill text-secondary"></i>
+        <img src="https://www.iconsdb.com/icons/preview/gray/gear-xxl.png" width="18" height="18" >
       </a>
     </div>
-    
+    <img src="../images/image.png" class="mx-auto d-block" class="sizing">
     <div class="text-center mb-3">
       <a id="submit-btn">
       <img src="../images/grey-image_2.png" title="Click to download"alt="Grey-Box" height="100" >
@@ -24,8 +23,9 @@
     </div>
     <form id="form" class="row row-cols-lg-auto g-3 align-items-center">
       <div class="col-12 input-group-sm">
-        <input type="url" required name="url" disabled class="form-control" id="url-input" placeholder="">
+        <input type="url" required name="url" disabled class="form-control" id="urlFormInput" placeholder="">
       </div>
+
 
       <!-- <div class="col-12 input-group-sm" id="max_links_div" hidden>
         <label class="d-inline-block" for="depthFormInput">Max Links</label>
