--- a/html/popup2.html
+++ b/html/popup2.html
@@ -9,57 +9,34 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/styles.css">
   </head>
-  <body class="py-2 px-3 white-background text-center ">
-    <div class="d-flex justify-content-end mb-2 ms-auto">
-      <a class="me-2" href="tutorial.html" target="_blank">
-        <img src="https://www.iconsdb.com/icons/preview/gray/gear-xxl.png" width="18" height="18" >
-      </a>
-    </div>
-    <img src="../images/image.png" class="mx-auto d-block" class="sizing">
+  <body class="py-2 px-3 white-background ">
+    <!-- <img src="../images/image.png" class="mx-auto d-block" class="sizing"> -->
+    <h3 class="text-bg-secondary py-2 text-center">WebSaver Grey-Box</h3>
     <div class="text-center mb-3">
       <a id="submit-btn">
-      <img src="../images/grey-image_2.png" title="Click to download"alt="Grey-Box" height="100" >
+        <div class="tooltip2">
+          <img src="../images/grey-image_2.png" alt="Grey-Box" height="100" >
+          <span class="tooltiptext2">Click to download</span>
+        </div>
       </a>
     </div>
+    <!-- Toast message -->
+    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" id="myToast">
+      <div class="toast-header">
+        <i class="bi bi-exclamation-triangle-fill text-warning"></i> 
+        <strong class="pl-4 me-auto">Alert</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+      </div>
+      <div class="toast-body">
+        The program is in the download process.<br>Please wait until it finishes!
+      </div>
+    </div>
+
     <form id="form" class="row row-cols-lg-auto g-3 align-items-center">
       <div class="col-12 input-group-sm">
         <input type="url" required name="url" disabled class="form-control" id="urlFormInput" placeholder="">
       </div>
-
-
-      <!-- <div class="col-12 input-group-sm" id="max_links_div" hidden>
-        <label class="d-inline-block" for="depthFormInput">Max Links</label>
-        <input class="d-inline-block" type="number" name="depth" min="1" max="1000" class="form-control" id="max-links" placeholder="1-100" value="1">
-      </div> -->
-
-      <!-- <div class="progress">
-        <div  id="progress-bar" class="progress-bar progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-      </div>
-      <p id="currentProgress"></p> -->
-
-      <form id="option-form" class="row row-cols-lg-auto g-3 align-items-center" action="#">
-       <!--  <div class="col-12">
-          <div class="col-12">
-            <div class="form-check">
-              <label class="form-check-label" for="max_links_op">
-                <input class="form-check-input" name="max_links_op" type="checkbox" id="max_links_op">
-                Set Max # of links
-              </label>
-              <div class="tooltip2">&#x1F6C8;
-                <span class="tooltiptext2">Select this if you think the page has a lot of links</span>
-              </div>
-            </div>   
-          </div> -->
-
-          
-        </div>
-        <div class="alert alert-danger" role="alert" id="link_alert" style="font-size:12px" hidden>
-          This page has a lot of links, we highly reccomend setting a low depth or a max link limit.
-        </div>
-      </form>
-      <!-- <div class="submitBtn text-center mb-3">
-        <button class="btn btn-primary">Download</button>
-      </div> -->
+    </form>
       <div class="d-flex justify-content-left">
         <div>
           <a class="d-block mb-2 " data-bs-toggle="collapse" href="#options-collapse" role="button" aria-expanded="false" aria-controls="options-collapse" style="background-color: white; border: none; color: dimgray;">
@@ -68,25 +45,48 @@
 
         </div>
       </div>
-    <div class="collapse" id="options-collapse">
-      <div class="col-12 input-group-sm">
-        <label class="form-check-label" for="omit-images-checkbox">
-          <input class="form-check-input" type="checkbox" id="omit-imgs" name="omit_images">
-          Omit Images
-        </label>
-        <div class="tooltip2">&#x1F6C8;
-          <span class="tooltiptext2">Select this to omit downloading images from the website</span>
-        </div>
+    <div class="collapse " id="options-collapse">
+      <div class="container">
+          <div class="row justify-content-start text-left">
+            <!-- Omit -->
+            <div class="col-8 justify-content-start input-group-sm">
+              <label class="form-check-label" for="omit-images-checkbox">
+                <input class="form-check-input" type="checkbox" id="omit-imgs" name="omit_images">
+                Omit Images
+              </label>
+              <div class="tooltip2">&#x1F6C8;
+                <span class="tooltiptext2">Select this to omit downloading images from the website</span>
+              </div>
+            </div>
+            <!-- Help icon -->
+            <div class="col-4">
+              <div class="d-flex justify-content-end mb-2 ms-auto">
+                <a class="me-2" href="tutorial.html" target="_blank">
+                  <i class="bi bi-patch-question text-dark"></i>
+                  <!-- <img src="https://www.iconsdb.com/icons/preview/gray/gear-xxl.png" width="18" height="18" > -->
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Depth -->
+          <div class="row justify-content-start">
+            <div class="col-12  input-group-sm">
+              <label class="d-inline-block" for="depth-input">Depth</label>
+              <div class="tooltip2">&#x1F6C8;
+                <span class="tooltiptext2">Each time a new page is visited it is one level deeper than the last page</span>
+              </div>
+              <input class="d-inline-block" type="number" name="depth" min="0" max="10" class="form-control" id="depth-input" placeholder="0-10" value="1">
+            </div>
+          </div>
+          <div class="alert alert-warning mt-1" role="alert" id="alert-depth">
+            Increase the depth will take long time to download. 
+          </div>
       </div>
-  
-      <div class="col-12 input-group-sm">
-        <label class="d-inline-block" for="depth-input">Depth</label>
-        <div class="tooltip2">&#x1F6C8;
-          <span class="tooltiptext2">Each time a new page is visited it is one level deeper than the last page</span>
-        </div>
-        <input class="d-inline-block" type="number" name="depth" min="0" max="10" class="form-control" id="depth-input" placeholder="0-10" value="1">
+      <div class="py-1">
+          <!-- Setting -->
+          <button class="btn btn-sm btn-secondary justify-content-start" id="go-to-options">Setting</button>        
       </div>
-      <button class="btn btn-sm btn-secondary" id="go-to-options">Setting</button>
+
     </div>
   </div>
   
