make an alert for depth
when depth >=2 , alert is shown

--- a/html/popup2.html
+++ b/html/popup2.html
@@ -78,8 +78,9 @@
               <input class="d-inline-block" type="number" name="depth" min="0" max="10" class="form-control" id="depth-input" placeholder="0-10" value="1">
             </div>
           </div>
-          <div class="alert alert-warning mt-1" role="alert" id="alert-depth">
-            Increase the depth will take long time to download. 
+          <!-- Alert for depth -->
+          <div class="alert alert-warning mt-1" role="alert" id="alert-depth" hidden="True">
+            Increasing the depth will take long time to download.<br> We recommend setting a small depth (less than 2) for a faster download.
           </div>
       </div>
       <div class="py-1">
