--- a/html/window.html
+++ b/html/window.html
@@ -18,7 +18,14 @@
     <div class="progress">
       <div  id="progress-bar" class="progress-bar progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
-    <p id="current-progress"></p>
+      <div>
+        <div class="spinner-border text-primary m-1"  style="width: 1rem; height: 1rem;" id="spinner" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+        <span id="current-progress"></span>
+      </div>
+
+
      
     
     <p>
