--- a/html/popup2.html
+++ b/html/popup2.html
@@ -4,14 +4,26 @@
   <script src="../js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
   <head>
-    <title>Grey-box Web Scraper</title>
+    <title>Project Web Scraper</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/styles.css">
   </head>
   <body class="py-2 px-3 white-background ">
     <!-- <img src="../images/image.png" class="mx-auto d-block" class="sizing"> -->
-    <h3 class="text-bg-secondary py-2 text-center">WebSaver Grey-Box</h3>
+    <h3 class="text-bg-secondary py-2 text-center">Project Web Scraper</h3>
+    <!-- Help icon -->
+    <div>
+      <div class="d-flex justify-content-end mb-2 ms-auto">
+        <a class="mx-3" role="button" id="go-to-options">
+          <i class="bi bi-gear text-dark"></i>
+        </a>
+        <a class="me-2" href="https://www.notion.so/grey-box/Project-Web-Scrapper-Instruction-for-version-BETA-7ba5a0f1b7dc4406ab812c58c53b3c4d" target="_blank">
+          <i class="bi bi-patch-question text-dark"></i>
+          <!-- <img src="https://www.iconsdb.com/icons/preview/gray/gear-xxl.png" width="18" height="18" > -->
+        </a>
+      </div>
+    </div>
     <div class="text-center mb-3">
       <a id="submit-btn">
         <div class="tooltip2">
@@ -34,7 +46,7 @@
 
     <form id="form" class="row row-cols-lg-auto g-3 align-items-center">
       <div class="col-12 input-group-sm">
-        <input type="url" required name="url" disabled class="form-control" id="urlFormInput" placeholder="">
+        <input type="url" required name="url" disabled class="form-control border-0 bg-transparent text-center text-secondary" id="urlFormInput" placeholder="">
       </div>
     </form>
       <div class="d-flex justify-content-left">
@@ -48,9 +60,9 @@
     <div class="collapse " id="options-collapse">
       <div class="container">
           <div class="row justify-content-start text-left">
-            <!-- Omit -->
+            <!-- Omit Img -->
             <div class="col-8 justify-content-start input-group-sm">
-              <label class="form-check-label" for="omit-images-checkbox">
+              <label class="form-check-label" for="omit-imgs">
                 <input class="form-check-input" type="checkbox" id="omit-imgs" name="omit_images">
                 Omit Images
               </label>
@@ -58,16 +70,18 @@
                 <span class="tooltiptext2">Select this to omit downloading images from the website</span>
               </div>
             </div>
-            <!-- Help icon -->
-            <div class="col-4">
-              <div class="d-flex justify-content-end mb-2 ms-auto">
-                <a class="me-2" href="tutorial.html" target="_blank">
-                  <i class="bi bi-patch-question text-dark"></i>
-                  <!-- <img src="https://www.iconsdb.com/icons/preview/gray/gear-xxl.png" width="18" height="18" > -->
-                </a>
+
+            <div class="col-8 justify-content-start input-group-sm">
+              <label class="form-check-label" for="enable-large-depth">
+                <input class="form-check-input" type="checkbox" id="enable-large-depth" name="enable-large-depth">
+                Enable Large Depth
+              </label>
+              <div class="tooltip2">&#x1F6C8;
+                <span class="tooltiptext2">Select this to uncap the depth field (not recommended).</span>
               </div>
             </div>
           </div>
+          
           <!-- Depth -->
           <div class="row justify-content-start">
             <div class="col-12  input-group-sm">
@@ -75,17 +89,13 @@
               <div class="tooltip2">&#x1F6C8;
                 <span class="tooltiptext2">Each time a new page is visited it is one level deeper than the last page</span>
               </div>
-              <input class="d-inline-block" type="number" name="depth" min="0" max="10" class="form-control" id="depth-input" placeholder="0-10" value="1">
+              <input class="d-inline-block" type="number" name="depth" class="form-control" id="depth-input" placeholder="0-2" value="1">
             </div>
           </div>
           <!-- Alert for depth -->
           <div class="alert alert-warning mt-1" role="alert" id="alert-depth" hidden="True">
             Increasing the depth will take long time to download.<br> We recommend setting a small depth (less than 2) for a faster download.
           </div>
-      </div>
-      <div class="py-1">
-          <!-- Setting -->
-          <button class="btn btn-sm btn-secondary justify-content-start" id="go-to-options">Setting</button>        
       </div>
 
     </div>
