--- a/html/window.html
+++ b/html/window.html
@@ -7,19 +7,19 @@
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <script src="../js/bootstrap.min.js"></script>
   <head>
-    <title>Grey-box Web Scraper</title>
+    <title>Project Web Scraper</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/styles.css">
   </head>
   <body class="py-2 px-3 bg-light">
-    <h1 class="text-center">Grey-Box<br> Web Downloader</h1>
+    <h1 class="text-center">Project Web Scraper<br>Downloader</h1>
 
     <div class="progress">
       <div  id="progress-bar" class="progress-bar progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
       <div>
-        <div class="spinner-border text-primary m-1"  style="width: 1rem; height: 1rem;" id="spinner" role="status">
+        <div class="spinner-border text-primary m-1" hidden style="width: 1rem; height: 1rem;" id="spinner" role="status">
           <span class="visually-hidden">Loading...</span>
         </div>
         <span id="current-progress"></span>
