--- a/html/popup2.html
+++ b/html/popup2.html
@@ -61,7 +61,7 @@
             <!-- Help icon -->
             <div class="col-4">
               <div class="d-flex justify-content-end mb-2 ms-auto">
-                <a class="me-2" href="tutorial.html" target="_blank">
+                <a class="me-2" href="https://www.notion.so/grey-box/Project-Web-Scrapper-Instruction-for-version-BETA-7ba5a0f1b7dc4406ab812c58c53b3c4d" target="_blank">
                   <i class="bi bi-patch-question text-dark"></i>
                   <!-- <img src="https://www.iconsdb.com/icons/preview/gray/gear-xxl.png" width="18" height="18" > -->
                 </a>
