Changed all instances of "omit" to "skip"

--- a/html/options.html
+++ b/html/options.html
@@ -40,7 +40,7 @@
     <div> 
       <label>
         <input type="checkbox" id="omit-imgs" />
-        Omit Images
+        Skip Images
         <div class="tooltip2">&#x1F6C8;
           <span class="tooltiptext2">Select this if you wish to download webpages without images.</span>
         </div>
@@ -53,7 +53,7 @@
         </div>
       <label>
         <input type="checkbox" id="omit-video" disabled />
-        Omit Video
+        Skip Video
       </label>
     </div>
 
