--- a/html/popup2.html
+++ b/html/popup2.html
@@ -64,10 +64,10 @@
             <div class="col-8 justify-content-start input-group-sm">
               <label class="form-check-label" for="omit-imgs">
                 <input class="form-check-input" type="checkbox" id="omit-imgs" name="omit_images">
-                Omit Images
+                Skip Images
               </label>
               <div class="tooltip2">&#x1F6C8;
-                <span class="tooltiptext2">Select this to omit downloading images from the website</span>
+                <span class="tooltiptext2">Select this to skip downloading images from the website</span>
               </div>
             </div>
 
