--- a/html/window.html
+++ b/html/window.html
@@ -1,33 +1,31 @@
 <!--
-    Some notes:
     This is the HTML for the external window that opens once the user presses download.
 -->
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" href="../css/bootstrap.min.css">
-  <script src="../js/bootstrap.min.js"></script>
   <head>
-    <title>Grey-box Web Scraper</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/styles.css">
+    <title>Grey-Box</title>
+    <link rel="stylesheet" href="../css/bootstrap.min.css" />
+    <!-- <link rel="stylesheet" href="../css/styles.css" /> -->
   </head>
-  <body class="py-2 px-3 bg-light">
-    <h1 class="text-center">Grey-Box<br> Web Downloader</h1>
+  <body class="py-2 px-3 me-0 text-center">
+    <h1>Keep this window open while downloading page is in progress....</h1>
 
     <div class="progress">
-      <div  id="progress-bar" class="progress-bar progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+      <div
+        id="progress-bar"
+        class="progress-bar progress-bar-striped progress-bar-animated"
+        role="progressbar"
+        style="width: 0%"
+        aria-valuenow="0"
+        aria-valuemin="0"
+        aria-valuemax="100"
+      >
+        <span id="current-progress"></span>
       </div>
-    <p id="current-progress"></p>
-     
-    
-    <p>
-      <center>
-      Please provide feedback below!
-      <a class="btn btn-success btn-sm mt-2" href="https://forms.gle/p6quKSCDj5PoyVb37" target="_blank">Extension Feedback</a>
-      </center>
-    </p>
+    </div>
 
+    <script src="../js/bootstrap.min.js"></script>
     <script src="../js/jszip.js"></script>
     <script src="../js/jszip-utils.js"></script>
     <script src="../js/jquery-3.6.0.min.js"></script>
