--- a/html/window.html
+++ b/html/window.html
@@ -9,7 +9,7 @@
     <!-- <link rel="stylesheet" href="../css/styles.css" /> -->
   </head>
   <body class="py-2 px-3 me-0 text-center">
-    <h1>Keep this window open while downloading page is in progress....</h1>
+    <h1>Do not close this window while downloading page is in progress....</h1>
 
     <div class="progress">
       <div
@@ -24,7 +24,7 @@
         <span id="current-progress"></span>
       </div>
     </div>
-
+    <p id="notification"></p>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/jszip.js"></script>
     <script src="../js/jszip-utils.js"></script>
