--- a/html/popup2.html
+++ b/html/popup2.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <!-- Meta Tags -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Title -->
     <title>Grey-Box</title>
+    <!-- Bootstrap CSS (Local) -->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/styles.css"> 
+     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"> 
-  </head>
+      <!-- Custom CSS -->
+    <link rel="stylesheet" href="../css/styles.css"> 
+</head>
   <body class="py-2 px-3">
 
     <h3 class="text-white bg-secondary text-center rounded py-2 px-1 mb-3">Web Scraper by Grey-Box</h3>
-    <div class="d-flex justify-content-center mb-3">
+    <div class="d-flex justify-content-center mb-3">  
       <div id="submit-btn" class="text-center">
         <div class="sphere3D">         
           <img src="../images/grey-image_2.png" alt="Clickable Image" />  
@@ -29,7 +36,7 @@
     </div> 
     <div class="d-flex justify-content-left"> 
         <button class="d-block text-decoration-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample" style="background-color: white; border: none; color: dimgray;">
-           <span class="fs-5 fw-bold me-1">Advanced Options</span><i class="bi bi-caret-down"></i>
+           <span class="fs-5 me-1">Advanced Options</span><i class="bi bi-caret-down"></i>
         </button>
     </div>
     <div class="collapse" id="collapseWidthExample">
@@ -107,7 +114,10 @@
     </div>
 
   </div>
+     <!-- Optional: Add your own JS scripts -->
     <script src="../js/bootstrap.min.js"></script>
+
+    <!-- Optional: Add your own JS scripts -->
     <script>
       // Initialize tooltip component
       document.addEventListener("DOMContentLoaded", function(){
@@ -118,9 +128,12 @@
       });
     </script>
     <script src="../js/jszip.js"></script>
+       <!-- Optional: Add your own JS scripts -->
     <script src="../js/jszip-utils.js"></script>
+       <!-- Optional: Add your own JS scripts -->
     <script src="../js/jquery-3.6.0.min.js"></script>
+       <!-- Optional: Add your own JS scripts -->
     <script src="../js/popup.js"></script>
-    <!-- <script src="../js/window.js"></script>  -->
+  
   </body>
 </html>
