--- a/html/window.html
+++ b/html/window.html
@@ -25,6 +25,19 @@
       </div>
     </div>
     <p id="notification"></p>
+
+    <div id="feedback-form" class="mt-2 feedback-form-hide">
+      <center>
+        Your Download Is Complete!
+        <a
+          class="btn btn-secondary btn-sm mt-1"
+          href="https://forms.gle/p6quKSCDj5PoyVb37"
+          target="_blank"
+          >Please provide feedback</a
+        >
+      </center>
+    </div>
+
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/jszip.js"></script>
     <script src="../js/jszip-utils.js"></script>
